src/test/deca/syntax/valid/cast_float.deca
// Description :
// Test syntaxique valide : cast explicite bien parenthésé.
//
// Resultats :
// Accepté par l'analyse syntaxique.

{
    int a;
    float f;

    f = (float)(a);
}