src/test/deca/syntax/invalid/cast_missing_parenthesis_2.deca
// Description :
// Test syntaxique invalide : cast mal parenthésé.
//
// Resultats :
// Erreur syntaxique.

{
    int a;
    float f;

    f = float(a);
}